--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,25 @@
+altgraph==0.17.4
 beautifulsoup4==4.12.3
 bs4==0.0.2
 certifi==2024.12.14
 charset-normalizer==3.4.0
 idna==3.10
+importlib_metadata==8.5.0
 numpy==2.0.2
+packaging==24.2
 pandas==2.2.3
+pefile==2023.2.7
+pyinstaller==6.11.1
+pyinstaller-hooks-contrib==2024.11
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
+pywin32-ctypes==0.2.3
 requests==2.32.3
 schedule==1.2.2
 six==1.17.0
 soupsieve==2.6
+tk==0.1.0
 tzdata==2024.2
 urllib3==2.3.0
+zipp==3.21.0
