add new dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,11 @@ beautifulsoup4==4.12.3
 bs4==0.0.2
 certifi==2024.12.14
 charset-normalizer==3.4.0
+cx_Freeze==7.2.7
+cx_Logging==3.2.1
 idna==3.10
 importlib_metadata==8.5.0
+lief==0.15.1
 numpy==2.0.2
 packaging==24.2
 pandas==2.2.3
@@ -20,6 +23,8 @@ schedule==1.2.2
 six==1.17.0
 soupsieve==2.6
 tk==0.1.0
+tomli==2.2.1
+typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.3.0
 zipp==3.21.0
